fix: remove wrap minheight

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -31,7 +31,6 @@ h1, h2, h3, h4, h5, h6 {
     padding: $container-padding-respo;
     margin: 0 auto;
     display: flex;
-    min-height: 100vh;
     position: relative;
     z-index: 1;
 
